<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qu_helado_quieres"
        android:textSize="38sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/vainilla"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="270dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/vainilla"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/v_number"
        android:layout_marginTop="50dp"
        android:inputType="number"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vainilla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
         />

    <TextView
        android:id="@+id/fresa"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="280dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vainilla"
        android:text="@string/fresa"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/f_number"
        android:inputType="number"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/fresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vainilla"
        />

    <TextView
        android:id="@+id/chocolate"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fresa"
        android:text="@string/chocolate"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/c_number"
        android:inputType="number"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/chocolate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fresa"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="220dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chocolate" />

    <Button
        android:id="@+id/generar"
        android:layout_marginTop="124dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:text="@string/generar" />

</androidx.constraintlayout.widget.ConstraintLayout>